# Trip_Planner

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  findings.md  progress.md  task_plan.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/.omc/: project-memory.json
backend/.omc/state/: agent-replay-4dca36db-5343-4a7e-bdf9-a1981c8d5a80.jsonl  agent-replay-d684cbb0-9721-491a-bccd-313f57fcbc24.jsonl  agent-replay-db6f15ce-daf1-41cf-9a67-ec2e2a729395.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
backend/app/: config.py
backend/app/agents/: trip_planner_agent.py
backend/app/api/: main.py
backend/destination_intelligence_streamlit_reports/: deep_search_report_明后天旅游北京攻略_20260622_171751.md
backend/scripts/: debug_rag_retrieval.py  evaluate_rag_retrieval.py  ingest_data.py
backend/tests/: conftest.py  test_api_trip.py  test_arithmetic_tool.py  test_cache_service.py  test_chatbot_agent.py  test_deep_planning_service.py  test_destination_intelligence_config.py  test_destination_intelligence_llm.py  test_destination_intelligence_nodes.py  test_destination_intelligence_search.py  test_destination_intelligence_state.py  test_destination_intelligence_travel_guide.py  test_export_service.py  test_local_life_service.py  test_location_service.py  test_map_service.py  test_models_schemas.py  test_rag_retriever.py  test_report_catalog_service.py  test_report_itinerary_agent.py  test_services_trip.py  test_storage_service.py  test_transport_query_service.py  test_trip_planner_agent.py
frontend/: .env.example  (+3 more)
(+134 files in other folders)
