[project]
name = "backend"
version = "0.1.0"
description = "yuntu 后端服务"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5,<1.0",
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "langchain>=0.2,<0.4",
    "langchain-community>=0.2,<0.4",
    "langchain-core>=0.2,<0.4",
    "langchain-openai>=0.1,<0.3",
    "markdown-it-py>=3.0,<4.0",
    "pydantic>=2.6,<3.0",
    "pytest>=8.0,<9.0",
    "python-dotenv>=1.0,<2.0",
    "redis>=5.0,<6.0",
    "reportlab>=4.0,<5.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.29,<1.0",
    "tavily-python",
    "loguru",
    "streamlit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
